mkCol, delete, deleteIfExists, exists methods inserted